app/assets/stylesheets/custom.css.scss
/* ... */
.name {
	direction: ltr;
	.fullname {
		letter-spacing: 0;
		text-align: left;
    font-size: 30px;
    line-height: 1;
    margin-bottom: 2px;
    font-weight: bold;
    color: rgb(51, 51, 51);
		}
}

.bio {
	max-width: 420px;
	font: italic 13px/18px Georgia,"Times New Roman",serif;
	color: rgb(119, 119, 119);
	word-wrap: break-word;
	padding-bottom:7px;
}

.location {
	font-size: 12px;
	line-height: 18px;
	color: rgb(119, 119, 119);
}

.actions {
	position: relative;
	float: right;
	line-height: 16px;
}

.actions .stats {
  max-height: 300px;
  overflow: hidden;
	background: none;
}

.actions .stats strong {
  display: inline;
}

.actions .stats a {
  float: none;
  display: block;
  border-width: 1px 0px 0px;
  border-style: solid none none;
  border-color: rgb(232, 232, 232);
  color: rgb(153,153,153);
  font-size: 10px;
  line-height: 16px;
  text-transform: uppercase;
	&:hover {
		color: $blue;
	}
}

.actions .stats:first-child a {
  border-left: 0px none;
}

.actions .stats a strong {
  color: rgb(51,51,51);
  font-size: 14px;
}

.actions .stats li {
  display: inline;
  line-height: 16px;
}

.actions .stats li a {
  padding: 6px 12px 6px 0px;
  border-width: 1px 0px 0px;
  border-style: solid none none;
  border-color: rgb(232, 232, 232);
}

.actions .stats li:first-child a {
  border-top: 0px none;
}

.well {
	background-color: rgb(253, 253, 253);
	border: 1px solid rgb(240, 240, 240);
	border-radius: 0px 0px 0px 0px;
	margin: 0;
	padding: 12px 12px;
	cursor: pointer;
	@include shadows;
}

.well-inner {
	cursor: pointer;
}

.well-inner .gravatar {
  height: 50px;
  width: 50px;
  border-radius: 5px 5px 5px 5px;
}

.well-inner-header {
	line-height: 11px;
	margin-bottom: 4px;
	.user {
		font-weight: bold;
	}
	.admin a {
		font-weight: bold;
		color: $green;
	}
	.username {
		color: #ABA;
		font-weight: normal;
	}
	.timestamp {
		font-size: 107.7%;
  	color: $grayLight;
  	float: right;
  	font-weight: normal;
	}
}

.well-inner .content {
	line-height: 19px;
  display: block;
	margin-left: 60px;
	word-wrap: break-word;
	font-size: 107.1%;
}

.well-footer {
	font-size: 92.9%;
	margin-left: 60px;
	margin-bottom: -9px;
}

.well-footer .collapse {
	padding-top: 5px;
	padding-left: 10px;
	margin-bottom: -3px;
	margin-top: -5px;
}

.well-footer-empty {
	margin-top: 15px;
}

.well-header {
	color: #555;
	text-align: right;
	font-weight: bold;
	border: 1px solid rgb(240, 240, 240);
	border-radius: 5px 5px 0px 0px;
	padding: 8px;
	@include shadows-border;
	border-bottom: 0;
}

.well-bottom {
	border: 1px solid rgb(240, 240, 240);
	border-radius: 0px 0px 5px 5px;
	border-top: 0px;
	padding: 10px;
	@include shadows-border;
	border-bottom: 0;
}

.well:hover {
  background-color: rgb(245, 245, 245);
}

.well:hover:active {
  background-color: rgb(240, 240, 240);
}

.well-footer .share-actions li {
	display: inline;
	opacity: 0;
}

.well:hover .well-footer li {
    opacity: 100;
}

.well:hover .well-footer a {
    color: $blue;
}

.well-footer .shown {
	color: $grayLight;
	vertical-align: 6px;
}

.well-footer .share-actions {
	display: inline-block;
	height: 0;
}

.well-footer .share-actions .btn-link {
	font-size: 100%;
  color: $blue;
	margin-top: -2px;
	padding: 0;
	&:hover {
		text-decoration: underline;
	}
}

.well-footer .share-actions a {
  display: inline;
}

.well-footer .share-stats {
	float: right;
}

.well-footer .share-stats a {
	border-left: none;
	padding-left: 0px;
	&:first-child {
		border-left: 1px solid $grayLighter;
	}
}

.well-footer .share-stats strong {
	display: inline-block;
	margin-top: 1px;
	font-size: 115.4%;
}

.well-inner:hover strong {
 color: $red;
}

.well-footer .inline-share-stats {
	display: inline-block;
}

.well-footer .inline-share-stats a {
	color: rgb(153, 153, 153);
	font-size: 10px;
	text-transform: uppercase;
	&:first-child {
		margin-top: 2px;
		border-left: none;
		line-height: 4px;
		margin-right: -3px;
	}
}

.well-footer .inline-share-stats li {
	display: inline;
}

.well-footer .inline-share-stats li:first-child a {
	margin-top: 1px;
}

.well-footer .inline-share-reply {
	display: block;
}

.well-footer .inline-share-reply .inline-container {
	padding: 10px 0 3px 0;
	float: left;
	display: block;
}

.inline-container form {
	margin: -15px -11px -10px;
	padding: 5px;
}

.inline-container form input {
	display: none;
}

.inline-container form textarea {
	color: rgb(170, 170, 170);
	font-size: 13px;
	line-height: 18px;
	height: 38px !important;
	width: 350px;
	border-radius: 4px 4px 4px 4px;
	padding: 9px;
}

.inline-container form.active textarea {
	height: 78px !important;
	color: rgb(69, 69, 69);
	font-size: 14px;
	line-height: 18px;
}

.inline-container form.active input {
	display: block;
	margin-bottom: 8px;
}

[class^="icon-comment"], [class*=" icon-comment"] {
	margin-right: 5px;
	margin-left: 1px;
}

[class^="icon-remove"], [class*=" icon-remove"] {
	vertical-align: 2px;
	height: 13px;
	width: 13px;
}

[class^="icon-thumbs-up"], [class*=" icon-thumbs-up"] {
	vertical-align: 2px;
	margin-right: 1px;
	margin-left: 7px;
}

[class^="icon-heart"], [class*=" icon-heart"] {
	vertical-align: 3px;
	margin-left: 7px;
}

#error_explanation {
  color:#f00;
  ul {
    list-style: none;
    margin: 0 0 18px 0;
  }
}

.field_with_errors {
  @extend .control-group;
  @extend .error;
}

.debug_dump {
  clear: both;
  float: left;
  width: 100%;
  margin-top: 45px;
  @include box_sizing;
}

